--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=BackLaizeTech
+
+# habila o console web do h2 em http://localhost:8080/h2-console
+spring.h2.console.enabled=true
+
+# define a url fixa de acesso ao banco
+spring.datasource.url=jdbc:h2:mem:Laize_Tech
+
+#Habilita que os comandos sql sejam mostrados no log
+spring.jpa.show-sql=true
+
+# determina que os SQL da log sejam formatados.
+spring.jpa.properties.hibernate.format_sql=true
+
+# permite que o data.sql seja executada no momento certo
+spring.jpa.defer-datasource-initialization=true
+
+#as duas linhas abaixo são para habilitar os detalhes
+server.error.include-message=always
+server.error.include-binding-errors=always
