--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -7,19 +7,19 @@
 #spring.datasource.url=jdbc:h2:mem:Laize_Tech
 #
 ##Habilita que os comandos sql sejam mostrados no log
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #
 ## determina que os SQL da log sejam formatados.
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #
 ## permite que o data.sql seja executada no momento certo
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 #
 ##as duas linhas abaixo são para habilitar os detalhes
-#server.error.include-message=always
-#server.error.include-binding-errors=always
+server.error.include-message=always
+server.error.include-binding-errors=always
 
-spring.application.name=BackLaizeTech
+#spring.application.name=BackLaizeTech
 
 # Configurações do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
