--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.application.name=BackLaizeTech
+spring.application.name=BackLaizeTech
 #
 ## habila o console web do h2 em http://localhost:8080/h2-console
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 #
 ## define a url fixa de acesso ao banco
-#spring.datasource.url=jdbc:h2:mem:Laize_Tech
+spring.datasource.url=jdbc:h2:mem:Laize_Tech
 #
 ##Habilita que os comandos sql sejam mostrados no log
 spring.jpa.show-sql=true
@@ -22,16 +22,16 @@ server.error.include-binding-errors=always
 #spring.application.name=BackLaizeTech
 
 # Configurações do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configurações do JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Configurações de erro
 server.error.include-message=always
