--- a/dev/back-end/BackLaizeTech/BackLaizeTech/pom.xml
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/pom.xml
@@ -33,6 +33,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.mockito.kotlin</groupId>
+			<artifactId>mockito-kotlin</artifactId>
+			<version>4.1.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
