--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 #server.error.include-message=always
 #server.error.include-binding-errors=always
 
-spring.application.name=BackLaizeTech
+#spring.application.name=BackLaizeTech
 
 # Configurações do MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
