Subindo projeto sem erros de maven e com minhas api junto, ainda não vai funcionar porque não temos a AWS mas está pronta

--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -1,34 +1,39 @@
-#spring.application.name=BackLaizeTech
-#
-# habila o console web do h2 em http://localhost:8080/h2-console
-#spring.h2.console.enabled=true
-#
-# define a url fixa de acesso ao banco
-#spring.datasource.url=jdbc:h2:mem:Laize_Tech
-#
-##Habilita que os comandos sql sejam mostrados no log
-#spring.jpa.show-sql=true
-#
-## determina que os SQL da log sejam formatados.
-#spring.jpa.properties.hibernate.format_sql=true
-#
-## permite que o data.sql seja executada no momento certo
-#spring.jpa.defer-datasource-initialization=true
-#
-##as duas linhas abaixo são para habilitar os detalhes
-#server.error.include-message=always
-#server.error.include-binding-errors=always
+spring.application.name=BackLaizeTech
 
-#spring.application.name=BackLaizeTech
+# -------------------------------------------
+# CONFIGURAÇÃO ATIVA: BANCO DE DADOS H2 (EM MEMÓRIA)
+# -------------------------------------------
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:Laize_Tech
+spring.jpa.defer-datasource-initialization=true
 
-# Configurações do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password="SENHA"
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Configurações do JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# -------------------------------------------
+# CONFIGURAÇÃO DO JPA (GERAL)
+# -------------------------------------------
 spring.jpa.show-sql=true
+# CORRIGIDO: de 'pring' para 'spring'
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# -------------------------------------------
+# CONFIGURAÇÃO DE ERROS
+# -------------------------------------------
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# -------------------------------------------
+# CONFIGURAÇÃO DA AWS S3
+# -------------------------------------------
+aws.region=us-east-1
+aws.s3.bucket-name=SEU_NOME_DE_BUCKET_AQUI
+aws.credentials.access-key=SUA_ACCESS_KEY_AQUI
+aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
+
+# ----------------------------------------------------
+# CONFIGURAÇÃO INATIVA: BANCO DE DADOS MYSQL
+# Se precisar usar, descomente este bloco e comente o bloco do H2.
+# ----------------------------------------------------
+#spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password="SUA_SENHA_AQUI"
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
