--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 spring.application.name=BackLaizeTech
 
 # -------------------------------------------
-# CONFIGURAÇÃO ATIVA: BANCO DE DADOS H2 (EM MEMÓRIA)
+# CONFIGURACAO ATIVA: BANCO DE DADOS H2 (EM MEMORIA)
 # -------------------------------------------
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:Laize_Tech
 spring.jpa.defer-datasource-initialization=true
 
 # -------------------------------------------
-# CONFIGURAÇÃO DO JPA (GERAL)
+# CONFIGURACAO DO JPA (GERAL)
 # -------------------------------------------
 spring.jpa.show-sql=true
 # CORRIGIDO: de 'pring' para 'spring'
 spring.jpa.properties.hibernate.format_sql=true
 
 # -------------------------------------------
-# CONFIGURAÇÃO DE ERROS
+# CONFIGURACAO DE ERROS
 # -------------------------------------------
 server.error.include-message=always
 server.error.include-binding-errors=always
 
 # -------------------------------------------
-# CONFIGURAÇÃO DA AWS S3
+# CONFIGURACAO DA AWS S3
 # -------------------------------------------
 aws.region=us-east-1
 aws.s3.bucket-name=SEU_NOME_DE_BUCKET_AQUI
@@ -29,7 +29,7 @@ aws.credentials.access-key=SUA_ACCESS_KEY_AQUI
 aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
 
 # ----------------------------------------------------
-# CONFIGURAÇÃO INATIVA: BANCO DE DADOS MYSQL
+# CONFIGURACAO INATIVA: BANCO DE DADOS MYSQL
 # Se precisar usar, descomente este bloco e comente o bloco do H2.
 # ----------------------------------------------------
 #spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
