--- a/dev/back-end/BackLaizeTech/BackLaizeTech/pom.xml
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.2.0</version> <!-- Substitua pela versão mais recente disponível -->
+			<version>8.2.0</version>
 		</dependency>
 
 
