--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=BackLaizeTech
 # -------------------------------------------
 # CONFIGURACAO ATIVA: BANCO DE DADOS H2 (EM MEMORIA)
 # -------------------------------------------
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:Laize_Tech
-spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:Laize_Tech
+#spring.jpa.defer-datasource-initialization=true
 
 # -------------------------------------------
 # CONFIGURACAO DO JPA (GERAL)
@@ -32,8 +32,8 @@ aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
 # CONFIGURACAO INATIVA: BANCO DE DADOS MYSQL
 # Se precisar usar, descomente este bloco e comente o bloco do H2.
 # ----------------------------------------------------
-#spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password="SUA_SENHA_AQUI"
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=senha
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
