--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -34,6 +34,6 @@ aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
 # ----------------------------------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=senha
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
