--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -23,10 +23,13 @@ server.error.include-binding-errors=always
 # -------------------------------------------
 # CONFIGURACAO DA AWS S3
 # -------------------------------------------
+# Defina como 'true' para habilitar o S3, 'false' ou remova para desabilitar
+aws.s3.enabled=false
 aws.region=us-east-1
-aws.s3.bucket-name=SEU_NOME_DE_BUCKET_AQUI
-aws.credentials.access-key=SUA_ACCESS_KEY_AQUI
-aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
+aws.s3.bucket-name=bucket-laize-tech
+# Para usar o AWS S3, configure as credenciais abaixo com valores reais
+aws.credentials.access-key=
+aws.credentials.secret-key=
 
 # ----------------------------------------------------
 # CONFIGURACAO INATIVA: BANCO DE DADOS MYSQL
@@ -34,6 +37,6 @@ aws.credentials.secret-key=SUA_SECRET_KEY_AQUI
 # ----------------------------------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=senha
+spring.datasource.password=#Gf24103408812
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
