Subindo cadastro de produtos com erro 400.

--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.application.name=BackLaizeTech
 # CONFIGURACAO DO JPA (GERAL)
 # -------------------------------------------
 spring.jpa.show-sql=true
-# CORRIGIDO: de 'pring' para 'spring'
 spring.jpa.properties.hibernate.format_sql=true
 
 # -------------------------------------------
@@ -23,20 +22,22 @@ server.error.include-binding-errors=always
 # -------------------------------------------
 # CONFIGURACAO DA AWS S3
 # -------------------------------------------
-# Defina como 'true' para habilitar o S3, 'false' ou remova para desabilitar
 aws.s3.enabled=false
 aws.region=us-east-1
 aws.s3.bucket-name=bucket-laize-tech
-# Para usar o AWS S3, configure as credenciais abaixo com valores reais
 aws.credentials.access-key=
 aws.credentials.secret-key=
 
 # ----------------------------------------------------
 # CONFIGURACAO INATIVA: BANCO DE DADOS MYSQL
-# Se precisar usar, descomente este bloco e comente o bloco do H2.
 # ----------------------------------------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/laize_tech?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Ga986745#
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# -------------------------------------------
+# CONFIGURACAO DO DIRETORIO DE UPLOAD DE IMAGENS
+# -------------------------------------------
+file.upload-dir=uploads/imagens
