fix: Tamanho ajustado na application.properties.

--- a/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
+++ b/dev/back-end/BackLaizeTech/BackLaizeTech/src/main/resources/application.properties
@@ -41,3 +41,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # CONFIGURACAO DO DIRETORIO DE UPLOAD DE IMAGENS
 # -------------------------------------------
 file.upload-dir=uploads/imagens
+
+# -------------------------------------------
+# CONFIGURACAO DE LIMITE DE UPLOAD DE ARQUIVOS (10MB)
+# -------------------------------------------
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
